# PESP

./: .gitignore  README.md  flash-base.sh  flash-pico.sh  wget-log
base-station/: CMakeLists.txt  README.md  app.overlay  prj.conf
base-station/src/: main.c
base-station/src/driver/: sensor_node_driver.c  sensor_node_driver.h
docs/: PROJECT_GUIDE.md  WORKLOG.md  exhibit-case-guardian.md  final-verification-evidence.md  hardware.md  progress.md  protocol.md  test-plan.md
host-gui/: README.md  app.py
host-gui/static/: app.js  index.html  styles.css
sensor-node/: CMakeLists.txt  CMakePresets.json  README.md  pico_sdk_import.cmake
sensor-node/src/: bme680_min.c  bme680_min.h  main.c  veml7700_min.c  veml7700_min.h
tests/: protocol_frame_test.py
